# lab2AleksandraOlejarz

./: Bufor.cpp  Bufor.h  CMakeLists.txt  Circle.cpp  Circle.h  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Figure.cpp  Figure.h  MaxBufor.cpp  MaxBufor.h  MeanBufor.cpp  MeanBufor.h  Square.cpp  Square.h  TeamLeader.cpp  TeamLeader.h  main.cpp
