cmake_minimum_required(VERSION 3.23)
project(lab2AleksandraOlejarz)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab2AleksandraOlejarz main.cpp Circle.cpp Circle.h Figure.h Figure.cpp Developer.cpp Developer.h Employee.cpp Employee.h Square.cpp Square.h TeamLeader.cpp TeamLeader.h Bufor.cpp Bufor.h MeanBufor.cpp MeanBufor.h MaxBufor.cpp MaxBufor.h)
